--- a/PizzaApp/PizzaApp.Services/PizzaApp.Services.csproj
+++ b/PizzaApp/PizzaApp.Services/PizzaApp.Services.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaApp.DataAccess\PizzaApp.DataAccess.csproj" />
+    <ProjectReference Include="..\PizzaApp.Domain\PizzaApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
